Used real DV text

--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -14649,7 +14649,7 @@
     <unit id="5JJ5qLV" name="Meine persönliche Nachricht ändern">
       <segment>
         <source>Meine persönliche Nachricht ändern</source>
-        <target>Meine persönliche Nachricht ändern</target>
+        <target>Meine persönliche Mitteilung ändern</target>
       </segment>
     </unit>
     <unit id="sVxXfQu" name="Einen Aufstand der Verbannten vorbereiten (optional).">
