--- a/translations/forum+intl-icu.fr.xlf
+++ b/translations/forum+intl-icu.fr.xlf
@@ -43,7 +43,7 @@
     </unit>
     <unit id="s6GYS6C" name="coin">
       <notes>
-        <note category="german">mw</note>
+        <note category="german">zk</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/help/roleplay_options.html.twig</note>
       </notes>
       <segment>
@@ -53,7 +53,7 @@
     </unit>
     <unit id="g2fNZv3" name="card">
       <notes>
-        <note category="german">skat</note>
+        <note category="german">karte</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/help/roleplay_options.html.twig</note>
       </notes>
       <segment>
@@ -63,7 +63,7 @@
     </unit>
     <unit id="nl5DrDJ" name="rnduser">
       <notes>
-        <note category="german">spieler</note>
+        <note category="german">einwohner</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/help/roleplay_options.html.twig</note>
       </notes>
       <segment>
