--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -876,7 +876,7 @@
     <unit id="aZibx3x" name="Server-Log herunterladen">
       <notes>
         <note category="german">Server-Log herunterladen</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Server-Log herunterladen</source>
@@ -886,7 +886,7 @@
     <unit id="yvg6S11" name="Server-Log ansehen">
       <notes>
         <note category="german">Server-Log ansehen</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Server-Log ansehen</source>
@@ -896,7 +896,7 @@
     <unit id="UYFKH.u" name="Server-Log löschen">
       <notes>
         <note category="german">Server-Log löschen</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Server-Log löschen</source>
@@ -2115,7 +2115,7 @@
       <notes>
         <note category="german">Log</note>
         <note category="state">new</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Log</source>
@@ -4182,6 +4182,17 @@
       <segment>
         <source>Dateigröße: {s}</source>
         <target>File size: {s}</target>
+      </segment>
+    </unit>
+    <unit id="NSeveUs" name="Dateisystem">
+      <notes>
+        <note category="german">Dateisystem</note>
+        <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Dateisystem</source>
+        <target>Dateisystem</target>
       </segment>
     </unit>
   </file>
