--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -869,7 +869,7 @@
     <unit id="aZibx3x" name="Server-Log herunterladen">
       <notes>
         <note category="german">Server-Log herunterladen</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Server-Log herunterladen</source>
@@ -879,7 +879,7 @@
     <unit id="yvg6S11" name="Server-Log ansehen">
       <notes>
         <note category="german">Server-Log ansehen</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Server-Log ansehen</source>
@@ -889,7 +889,7 @@
     <unit id="UYFKH.u" name="Server-Log löschen">
       <notes>
         <note category="german">Server-Log löschen</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Server-Log löschen</source>
@@ -2103,7 +2103,7 @@
       <notes>
         <note category="german">Log</note>
         <note category="state">new</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Log</source>
@@ -4146,6 +4146,17 @@
       <segment>
         <source>Dateigröße: {s}</source>
         <target>Dateigröße: {s}</target>
+      </segment>
+    </unit>
+    <unit id="NSeveUs" name="Dateisystem">
+      <notes>
+        <note category="german">Dateisystem</note>
+        <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Dateisystem</source>
+        <target>Dateisystem</target>
       </segment>
     </unit>
   </file>
