--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -24,7 +24,7 @@
     <unit id="ITvthhv" name="Sehr gut, niemand hat dich bei deinem Einbruch bei {victim} beobachtet.">
       <notes>
         <note category="german">Sehr gut, niemand hat dich bei deinem Einbruch bei {victim} beobachtet.</note>
-        <note category="from">php:///src/Controller/InventoryAwareController.php</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Sehr gut, niemand hat dich bei deinem Einbruch bei {victim} beobachtet.</source>
@@ -404,7 +404,7 @@
     <unit id="TEo9cyt" name="Das Tor ist bereits geschlossen.">
       <notes>
         <note category="german">Das Tor ist bereits geschlossen.</note>
-        <note category="from">twig:///templates/scripts/errors/town.txt.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Das Tor ist bereits geschlossen.</source>
@@ -1836,7 +1836,7 @@
     <unit id="seBLTh9" name="Diese Zone">
       <notes>
         <note category="german">Diese Zone</note>
-        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Diese Zone</source>
@@ -5027,7 +5027,7 @@
     <unit id="Q9LWBP_" name="Nach einigen Anstrengungen hast du folgendes gefunden: {item}!">
       <notes>
         <note category="german">Nach einigen Anstrengungen hast du folgendes gefunden: {item}!</note>
-        <note category="from">php:///src/Controller/BeyondController.php;php:///src/Controller/ExplorationController.php;php:///src/Service/ZoneHandler.php</note>
+        <note category="from">php:///src/Controller/ExplorationController.php;php:///src/Service/ZoneHandler.php</note>
       </notes>
       <segment>
         <source>Nach einigen Anstrengungen hast du folgendes gefunden: {item}!</source>
@@ -10999,7 +10999,7 @@
     <unit id="z3Y3jVt" name="Anonyme Beschwerde">
       <notes>
         <note category="german">Anonyme Beschwerde</note>
-        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php;php:///src/Controller/Town/TownHomeController.php</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Anonyme Beschwerde</source>
@@ -11019,7 +11019,7 @@
     <unit id="1VFuVbv" name="Beschwerde zurückgezogen">
       <notes>
         <note category="german">Beschwerde zurückgezogen</note>
-        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php;php:///src/Controller/Town/TownHomeController.php</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Beschwerde zurückgezogen</source>
@@ -18604,7 +18604,7 @@
     <unit id="7d1x6jh" name="Die Zombies haben beim Angriff {list} zerstört.">
       <notes>
         <note category="german">Die Zombies haben beim Angriff {list} zerstört.</note>
-        <note category="from">db://LogEntryTemplate</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Die Zombies haben beim Angriff {list} zerstört.</source>
@@ -22839,7 +22839,6 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Klicke hier, um seine Informationen anzuzeigen</note>
         <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Klicke hier, um seine Informationen anzuzeigen</source>
@@ -22850,7 +22849,6 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Ganz genau, das bist du!</note>
         <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Ganz genau, das bist du!</source>
@@ -22923,7 +22921,6 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Def.</note>
         <note category="from">twig:///templates/ajax/game/town/citizen.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Def.</source>
@@ -22934,7 +22931,6 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Zeigt die Hausverteidigung an.</note>
         <note category="from">twig:///templates/ajax/game/town/citizen.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Zeigt die Hausverteidigung an.</source>
@@ -22945,7 +22941,6 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Dieser Wert spiegelt die Anwesenheit und Aktivität eines jeden Bürgers wider.</note>
         <note category="from">twig:///templates/ajax/game/town/citizen_omniscience.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Dieser Wert spiegelt die Anwesenheit und Aktivität eines jeden Bürgers wider.</source>
@@ -22956,7 +22951,6 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Löschen</note>
         <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Löschen</source>
@@ -22965,9 +22959,8 @@ cette violente opération...]]></target>
     </unit>
     <unit id="5JJ5qLV" name="Meine persönliche Nachricht ändern">
       <notes>
-        <note category="german">Meine persönliche Nachricht ändern</note>
+        <note category="german">Meine persönliche Mitteilung ändern</note>
         <note category="from">twig:///templates/ajax/game/town/citizen.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Meine persönliche Nachricht ändern</source>
