--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23001,5 +23001,16 @@
         <target>Einen Aufstand der Verbannten vorbereiten (optional).</target>
       </segment>
     </unit>
+    <unit id="gfklKsJ" name="Du bist der {rolename} dieser Stadt.">
+      <notes>
+        <note category="german">Du bist der {rolename} dieser Stadt.</note>
+        <note category="from">php:///src/DataFixtures/CitizenFixtures.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du bist der {rolename} dieser Stadt.</source>
+        <target>Du bist der {rolename} dieser Stadt.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
